# python-for-ai

./: .gitignore  cleaned_data.csv  data.csv  dirty_data.csv  filtered_data.csv  product.txt  requirements.txt  students_datas_for_validation.csv  top_students_by_makrs.csv
Deep_Dive_InTo_Ml_Model_Creation/customer-segmentation/: Untitled.ipynb
Fast API/: ApiPracticeOne.py  PublicApiAccess.py  main.py
Fast API/Mini Projects On API/: main.py
Fast Api Projects/First Fast Api Project With Db/: main.py
ML_Model_Into_Pkl/: main.py  model.pkl  train_model.py
Mini Ml Projects/Employee Promotions Predictor/: EmployeePromotaionPredictor.py  employee_promotions.csv
Mini Ml Projects/Employee Salary Predictor/: EmployeeSalaryPredictor.py  Salary_Data.csv
Mini Ml Projects/House Price Prediction/: HousePricePrediction.py
Mini Ml Projects/Loan Approval/: LoanApprovalPredictor.py
Modules_Packages_Pip/: FirstClass.py
basics-of-python/: pyproject.toml
basics-of-python/src/basics_of_python/: main.py  salaryCalclator.py
gemini-ai-chat-app/: app.py  app_three.py  app_two.py  chat_history.json  fact_extractor.py  profile_service.py  test_fact_extractor.py  user_profile.json
langchain-rag-chatbot/: agent_demo.py  chat.py  ingest.py  requirements.txt
rag-pdf-chatbot/: chroma_service.py  chunker.py  embedding_test.py  main.py  pdf_loader.py  rag_service.py  requirements.txt  test.py
sample codes/: FileHandling.py  MatPlotLib.py  NumPyPractice.py  PandasPractice.py  StudentDataFile.py  oopsStarted.py  practice.py  students_datas.py
(+26 files in other folders)
