[project]
name = "basics-of-python"
version = "0.1.0"
description = ""
authors = [
    {name = "SURIYAPRABAKARAN",email = "suriyaprabakara25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "basics_of_python", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
